--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,14 +4,13 @@
   justify-content: space-between;
   background-color: rgb(145, 125, 159);  
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  border-bottom: solid 8px lightgray;
- 
+  border-bottom: solid 8px lightgray; 
 }
 
 .header {
   padding-right: 15px; 
   padding-left: 35px;
-  margin: 20px;
+  margin: 20px;  
 }
 
 .title {
@@ -22,7 +21,7 @@
 
 .navbar { 
   display: flex;
-  margin: 20px;
+  margin: 20px;  
 }
 
 .nav { 
@@ -32,7 +31,6 @@
   flex-wrap: wrap;  
   list-style-type: none;
   padding-left: 0;
-
 }
 
 .nav-item { 
@@ -115,28 +113,57 @@
 }        
 
 @media only screen and (max-width: 768px) {
+  .nav-container {
+    justify-content: space-between;
+  }
+
   .header {
-    width: 50%;  
-    text-align: center;
+    max-width: none;  
+    width: 70%;
+    margin-right: 0;   
   }
 
   .navbar {
+    width: 30%;
     margin: 0;
+    margin-right: 15px;
     text-align: center;
   }
 
   .nav {
-    justify-content: center;
+    justify-content: right;
   }
 
   .nav-item {
-    width: 100%;
+    width: 100%;  
   }   
 }    
+
+
+@media only screen and (max-width: 600px) { 
+  .header {   
+    text-align: center;
+    max-width: 65%;;
+  }
+
+  .nav {
+    justify-content: center;
+    padding-right: 5px;;
+  }
+
+  .navbar {
+    min-width: 35%;   
+    margin-right: 0px;
+  }
+}
 
 @media only screen and (max-width: 475px) { 
   .title {
     font-size: 52px;
+  }
+
+  .navbar {
+    min-width: 45%;   
   }
 
   .nav-item a{   
