--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,5 +1,8 @@
 .about-container {
     width: 100%;
+    min-height: 100vh;
+    position: relative;   
+    padding-bottom: 2.5rem;    
 }
 .about {
     display: flex;    
@@ -7,17 +10,22 @@
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: darkgray;
-    font-size: 25px;         
+    font-size: 25px;  
+    padding-bottom: 50px;      
 }
 
-.pic-container {
-    max-height: 25%;
-    max-width: 25%;
+.about-title {  
+    margin-bottom: 0px;
 }
 
-.profile-pic{
+.pic-container {  
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 15%;
+    min-width: 15%;         
+}
+
+.profile-pic {  
     margin: 50px; 
     border: solid 8px lightgray;      
     width: 200px; 
@@ -26,14 +34,20 @@
     border-radius: 50%;      
 }
 
+.image {
+    width: 200px; 
+    height: 200px;
+}
+
 .bio{
-    margin: 50px;
+    margin: 40px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    max-width: 75%;
+    max-width: 65%;
     align-items: left;
     min-height: 400px;  
+    text-align: justify;
 }
 
 .image{
@@ -43,16 +57,52 @@
  margin-top: -5px;  
 }
 
-@media only screen and (max-width: 967px) {   
-    .about {
-      flex-direction: column;
-    }  
-    
+@media only screen and (max-width: 1200px) {   
+    .about-title {
+        margin-top: 50px;       
+    }
+
     .profile-pic {
-        margin-bottom: 0px;
+        margin: 40px;
     }
 
     .bio {
-        margin: 0px 50px;
+        margin: 0px;
+        min-width: 60%;
     }
   }      
+
+@media only screen and (max-width: 992px) {   
+    .about {
+     font-size: 22px;
+    } 
+    
+    .profile-pic {
+        margin: 50px 10px 0px 15px;
+    }
+
+    .bio {
+        margin: 10px;
+    } 
+  }      
+
+  @media only screen and (max-width: 768px) {   
+     .about {
+      flex-direction: column;
+      align-items: center;
+    }  
+   
+    .profile-pic {
+        margin-top: 40px;
+    }
+
+    .bio {      
+        min-width: 80%;
+    } 
+
+    .about-title {    
+        text-align: center;
+        margin-top: 10px;
+    }
+}      
+
