--- a/src/pages/portfolio/Portfolio.css
+++ b/src/pages/portfolio/Portfolio.css
@@ -1,9 +1,16 @@
+.portfolio-container {
+    width: 100%;
+    min-height: 100vh;
+    position: relative;   
+    padding-bottom: 2.5rem;    
+}
 .portfolio {
     display: flex;
     flex-direction: column;
     text-align: center;
     margin-left: 70px;
-    margin-right: 70px;            
+    margin-right: 70px;  
+    padding-bottom: 50px;          
 }
 
 .port-head {
@@ -16,15 +23,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-width: 40%;     
+    min-width: 40%;   
 }
 
 .port-card1, .port-card2, .port-card3, .port-card4, .port-card5, .port-card6 {
     display: flex;
     flex-direction: column;
     flex-wrap:wrap;
-    width: 400px;
-    min-width: 400px;
+    width: 400px;   
     height: 400px;
     border: solid 8px lightgray;
     margin: 10px;
@@ -197,7 +203,7 @@
 .port-card6 {
     background-image: url('./imgs/note-take.jpeg'); 
     background-size: 450px;
-    font-size: 55px;
+    font-size: 50px;
     font-weight: bolder;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
@@ -213,7 +219,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 60%;
+    margin-top: 70%;
     margin-bottom: 20%;
     padding-left: 45px;  
     color: black;  
@@ -239,4 +245,86 @@
     font-size: 75px;
 }
 
- 
+@media only screen and (max-width: 1200px) {    
+    .portfolio {   
+        margin-left: 20px;
+        margin-right: 20px;            
+    }
+
+    .port-card1, .port-card2, .port-card3, .port-card4, .port-card5, .port-card6 {       
+        width: 375px;  
+        height: 375px;     
+    }
+
+    .port-card3 {       
+        background-size: 480px;       
+    }
+
+    .weath-head {      
+        margin-top: 58%;          
+    }
+
+    .sun {     
+        padding: 8px 15px;
+    }
+    
+    .rain {        
+        padding: 8px 15px;
+    }    
+  }
+  
+  @media only screen and (max-width: 992px) {       
+    .portfolio {   
+        margin-left: 0px;
+        margin-right: 0px;            
+    }
+
+    .port-card1, .port-card2, .port-card3, .port-card4, .port-card5, .port-card6 {       
+        width: 350px;  
+        height: 350px;
+        min-width: 350px;  
+        min-height: 350px;      
+    }
+
+    .mixer-head {
+        margin-top: 65%;
+        margin-bottom: 15%;   
+    }
+
+    .port-card2 {        
+        background-size: 375px;
+        font-size: 55px;      
+    }
+
+    .port-card3 {       
+        background-size: 450px;   
+        font-size: 45px;    
+    }
+    .tech-head {
+        margin-top: 85%;
+        margin-bottom: 25%;      
+    }
+
+    .weath-head {      
+        margin-top: 56%;
+        margin-bottom: 10%;          
+    }
+
+    .sun {     
+        padding: 8px 10px;
+    }
+    
+    .rain {        
+        padding: 8px 10px;
+    }
+
+    .dec-head {
+        margin-top: 75%;
+        margin-bottom: 20%;            
+     }
+
+     .port-card6 {      
+        font-size: 45px;    
+    } 
+  }        
+  
