--- a/src/pages/resume/Resume.css
+++ b/src/pages/resume/Resume.css
@@ -1,3 +1,10 @@
+.resume-container {
+  width: 100%;
+  min-height: 100vh;
+  position: relative;   
+  padding-bottom: 2.5rem;    
+}
+
 .resume {
   display: flex;
   flex-direction: column;
@@ -6,6 +13,7 @@
   font-size: 25px;  
   margin-left: 70px;
   margin-right: 70px;    
+  padding-bottom: 50px;
 }
 
 .resume-p a { 
@@ -18,8 +26,7 @@
 .resume-p a:hover{
   color: white;
   background-color: rgb(106, 78, 125);
-  padding: 5px 10px;
- 
+  padding: 5px 10px; 
 }
 
 .resume-section {
@@ -38,4 +45,17 @@
   display: flex;
   flex-direction: column; 
   font-size: 25px;    
+}
+
+@media only screen and (max-width: 475px) { 
+  .resume {
+    justify-content: center;  
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;  
+  }
+
+  .resume-list {
+    text-align: left;
+  }
 }
